<resources>
    <string name="app_name">ServiceMe</string>
    <string name="facebook_app_id">541609842859564</string>
    <string name="fb_login_protocol_scheme">fb541609842859564</string>
    <string name="location">Location</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="turkish">Turkish</string>
    <string name="urdu">Urdu</string>
    <string name="russian">Russian</string>
    <string name="login">Login</string>
    <string name="sign_up_as_user">Sign up as user</string>
    <string name="sign_up_as_provider">Sign up as provider</string>
    <string name="already_have_an_account_login">Already have an account ? %1$s</string>
    <string name="skip_for_now">Skip for Now</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="message_loading">Loading …</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="accept_terms_and_condition">Accept Terms &amp; Condition</string>
    <string name="or_sign_up_with_social_media">Or sign up with social media</string>
    <string name="message_string_no_network_message">No network available, please try again later.</string>
    <string name="new_to_service_me">New to Service Me ? %1$s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_placeholder">       e.g. 550000000</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="services">Services</string>
    <string name="submit">Submit</string>
    <string name="license_no">License No.</string>
    <string name="message_enter_name">Please Enter Name.</string>
    <string name="message_enter_email">Please Enter Email Id.</string>
    <string name="message_enter_valid_email">Please Enter valid Email Id.</string>
    <string name="message_enter_valid_mobile">Please Enter valid Mobile No.</string>
    <string name="message_enter_password">Please Enter Valid Password.</string>
    <string name="message_password_short">Password length must be between 8 and 12 character.</string>
    <string name="message_password_invalid">Invalid Password.</string>
    <string name="message_error_connection">Error in connection</string>
    <string name="message_select_location">Please Select Location</string>
    <string name="message_enter_description">Please Enter Description</string>
    <string name="message_select_date_time">Please Select Date &amp; Time</string>
    <string name="enter_otp">Enter Code</string>
    <string name="message_verify_your_number">Verify Your Mobile Number</string>
    <string name="confirm">Confirm</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="message_rating_review"><![CDATA[Give The Rating & Review]]></string>
    <string name="omg">OMG!</string>
    <string name="awesome">Awesome</string>
    <string name="happy">Happy</string>
    <string name="meh">Meh</string>
    <string name="unsure">Unsure</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="horror">Horror</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="company_name">Company Name</string>
    <string name="company_registration_no">Company Registration No.</string>
    <string name="company_e_mail_id">Company E-mail Id</string>
    <string name="company_website">Company Website</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="done">Done</string>
    <string name="msg_please_enter_the_voucher_code">Please Enter the Voucher Code</string>
    <string name="proceed">Proceed</string>
    <string name="message_otp">Please Enter OTP.</string>
    <string name="message_otp_Valid">Please Enter Valid OTP.</string>
    <string name="message_password_mismatch">Password and Confirm Password is different.</string>
    <string name="company">Company</string>
    <string name="individual">Individual</string>
    <string name="website">Website</string>
    <string name="message_enter_reg_no">Please Enter Company Registration No.</string>
    <string name="message_enter_license_no">Please Enter License No.</string>
    <string name="message_enter_service">Please Enter Services.</string>
    <string name="message_accept_terms">Please accept Terms &amp; Conditions.</string>
    <string name="user">User</string>
    <string name="provider">Provider</string>
    <string name="home_services">Home Services</string>
    <string name="office_services">Office Services</string>
    <string name="service_request">Service Request</string>
    <string name="subscription">Subscription</string>
    <string name="scheduled_order">Scheduled Order</string>
    <string name="completed_order">Completed Order</string>
    <string name="ongoing_orders">OnGoing Orders</string>
    <string name="missing_orders">Missing Orders</string>
    <string name="cancelled_orders">Cancelled Orders</string>
    <string name="service_for_offices">Service for Offices</string>
    <string name="service_for_homes">Service for Homes</string>
    <string name="new_request">New Request</string>
    <string name="km">KM</string>
    <string name="total">Total</string>
    <string name="_00_00">00:00</string>
    <string name="client_name">Client Name</string>
    <string name="distance_in_km">Distance in Km</string>
    <string name="service_type">Service Type</string>
    <string name="date_time">Date/Time</string>
    <string name="reason">Reason</string>
    <string name="feedback">Feedback</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_video">Add Video</string>
    <string name="cancel">Cancel</string>
    <string name="book_now">Book Now</string>
    <string name="schedule">Schedule</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="ready_to_serve">Ready To Serve</string>
    <string name="not_ready">Not Ready</string>
    <string name="search_location">Search Location</string>
    <string name="accepting_result">Accepting Result</string>
    <string name="review_rating">Review &amp; Rating</string>
    <string name="service_cancel">Service Cancel</string>
    <string name="rationale_camera_storage_location">This app needs access to your Camera, Storage and Location.</string>
    <string name="rationale_camera_storage">This app needs access to your Camera and Storage</string>
    <string name="please_enter_your_review_feedback">Please Enter Your Review/Feedback</string>
    <string name="please_tell_us_about_your_experience">Please Tell us About your Experience</string>
    <string name="send">Send</string>
    <string name="accepted">Accepted</string>
    <string name="arriving">Arriving</string>
    <string name="reached">Reached</string>
    <string name="started">Started</string>
    <string name="completed">Completed</string>
    <string name="current_service">Current Service</string>
    <string name="current">Current</string>
    <string name="profile">Profile</string>
    <string name="activity">Activity</string>
    <string name="ongoing">Ongoing</string>
    <string name="cancelled">Cancelled</string>
    <string name="favourite">Favourite</string>
    <string name="worker_name">Worker Name</string>
    <string name="reschedule">Reschedule</string>
    <string name="status">Status</string>
    <string name="book_again">Book Again</string>
    <string name="add_photos">Add Photos</string>
    <string name="adding_more_images_to_your_order_will_help_in_understanding_the_problem">Adding more images to your order, will help in understanding the problem.</string>
    <string name="add_videos">Add Videos</string>
    <string name="adding_more_videos_to_your_order_will_help_in_understanding_the_problem">Adding more videos to your order, will help in understanding the problem.</string>
    <string name="video_images">Video/Images</string>
    <string name="request_sent">Request Sent</string>
    <string name="msg_request_sent">Your service request has been sent to the Service Provider to accept. We will notify you as soon as he accepts.</string>
    <string name="app_intro">ServiceMe is a multi international Company leading of providing on-demand business offices and home services platform and we are currently operating in USA and Middle East. Wherever you are in home, office, restaurant, and gym or in the way, we offer an array of services for business organizations and houses, which include Mobiles Repair, Computer/laptop maintenance, Plumbing, Electrician, Carpenter, AC Repair, Appliances Repair and other.Our operating philosophy for solving this massive problem is Right company, Right person, Right time, Right thing and fit price.</string>
    <string name="continue_">Continue</string>
    <string name="accept_request">Accept Request</string>
    <string name="view_problem_activity">View Problem</string>
    <string name="description">Description</string>
    <string name="contact_number">Contact Number</string>
    <string name="name">Name</string>
    <string name="voucher">Voucher</string>
    <string name="service_providers">Service Providers</string>
    <string name="no_service">No Service</string>
    <string name="pending">Pending</string>
    <string name="view_problem">View Problem</string>
    <string name="get_direction">Get Direction</string>
    <string name="distance_km">Distance(KM)</string>
    <string name="_8_00_am">8:00 AM</string>
    <string name="_8_00_pm">8:00 PM</string>
    <string name="phone_number">Phone Number</string>
    <string name="distance">Distance</string>
    <string name="address">Address</string>
    <string name="about_plan">About Plan</string>
    <string name="confirmation">Confirmation</string>
    <string name="how_would_you_like_to_select_service_provider">How would you like to select service provider</string>
    <string name="automatically">Automatically</string>
    <string name="manually">Manually</string>
    <string name="payment">Payment</string>
    <string name="to_accept_this_request_please_pay">To accept this request Please pay</string>
    <string name="card">Card</string>
    <string name="photos">Photos</string>
    <string name="video">Video</string>
    <string name="home_city">Home City</string>
    <string name="service_location">Service Location</string>
    <string name="message_enter_city">Please Enter City Name.</string>
    <string name="message_select_profile_image">Please Select Profile Image</string>
    <string name="message_select_subscription_plan">Please Select Subscription Plan</string>
    <string name="message_enter_country_code">Please Enter Country Code</string>
    <string name="message_enter_valid_website">Please Enter Valid Website Address.</string>
    <string name="message_enter_valid_service">Please Enter Valid Service.</string>
    <string name="press_once_again_to_exit">Press once again to Exit</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="_00">+00</string>
    <string name="pay_now">Pay Now</string>
    <string name="current_plan_details">Current Plan Details</string>
    <string name="duration">Duration</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="payment_type">Payment Type</string>
</resources>