<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:paddingEnd="@dimen/_20sdp"
    android:paddingStart="@dimen/_20sdp">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_corners_modified"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="@dimen/_45sdp"
        android:text="@string/status"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivStatus"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_280sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/status1" />

            <LinearLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvAccepted"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:gravity="center_vertical"
                    android:text="@string/accepted"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18ssp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvArriving"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:gravity="center_vertical"
                    android:text="@string/arriving"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18ssp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvReached"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:gravity="center_vertical"
                    android:text="@string/reached"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18ssp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvStarted"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:gravity="center_vertical"
                    android:text="@string/started"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18ssp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvCompleted"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:gravity="center_vertical"
                    android:text="@string/completed"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18ssp" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_corners_primary_color"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="@dimen/_45sdp"
        android:text="@string/done"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp" />


</LinearLayout>
