<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp"
    >

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_45sdp"
        android:text="@string/confirmation"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_rounded_corners_modified"
        android:gravity="center_vertical|center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_rounded_corners_white_color"
        >

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_170sdp"
            android:text="@string/how_would_you_like_to_select_service_provider"
            android:textSize="@dimen/_16ssp"
            android:gravity="center_horizontal|center_vertical"
               />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnAutomatically"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/button_bg_round"
                android:text="@string/automatically"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10ssp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnManually"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/button_bg_round"
                android:text="@string/manually"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
