<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context="com.gropse.serviceme.activities.both.ChangePasswordActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/appbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnDone"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/done"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" />
</RelativeLayout>