<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:paddingEnd="@dimen/_20sdp"
    android:paddingStart="@dimen/_20sdp">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_corners_modified"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="@dimen/_45sdp"
        android:text="@string/request_sent"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_16ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_1sdp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/etFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/msg_request_sent"
            android:inputType="textMultiLine"
            android:minHeight="@dimen/_120sdp"
            android:padding="@dimen/_20sdp"
            android:textAlignment="center" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_corners_primary_color"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="@dimen/_45sdp"
        android:text="@string/done"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp" />

</LinearLayout>
